--- a/app/src/main/res/layout/menu_item.xml
+++ b/app/src/main/res/layout/menu_item.xml
@@ -4,5 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="200dp"
     app:cardElevation="4dp">
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        
+        <ImageView
+            android:id="@+id/menu_image"
+            android:scaleType="centerCrop"
+            android:src="@drawable/background_image"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        
+        <TextView
+            android:id="@+id/menu_name"
+            android:text="Nombre del menu"
+            android:textColor="@android:color/white"
+            android:background="#4f0e0d0e"
+            android:textSize="20sp"
+            android:gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
