--- a/app/src/main/res/layout/food_item.xml
+++ b/app/src/main/res/layout/food_item.xml
@@ -19,7 +19,7 @@
             android:layout_height="match_parent"/>
 
         <TextView
-            android:id="@+id/menu_name"
+            android:id="@+id/food_name"
             android:text="Nombre de la comida"
             android:textColor="@android:color/white"
             android:background="#4f0e0d0e"
