--- a/app/src/main/res/layout/activity_food_details.xml
+++ b/app/src/main/res/layout/activity_food_details.xml
@@ -10,7 +10,7 @@
         android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:backgroundTint="@color/white"
         android:fitsSystemWindows="true">
         
         <com.google.android.material.appbar.CollapsingToolbarLayout
@@ -115,12 +115,13 @@
                     </LinearLayout>
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-                        android:layout_width="100dp"
-                        android:layout_height="30dp"
+                        android:layout_width="140dp"
+                        android:layout_height="50dp"
                         android:id="@+id/number_button"
                         android:layout_marginTop="8dp"
                         android:layout_marginLeft="8dp"
                         android:layout_marginBottom="18dp"
+                        app:textColor="@color/white"
                         app:textSize="8sp"
                         app:initialNumber="1"
                         app:finalNumber="20"/>
