--- a/app/src/main/res/layout/activity_foot_list.xml
+++ b/app/src/main/res/layout/activity_foot_list.xml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FootList">
 
+    <com.mancj.materialsearchbar.MaterialSearchBar
+        android:id="@+id/searchBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        app:mt_speechMode="false"
+        app:mt_hint="@string/searchbar" />
+
+
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/searchBar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_food"
-        android:scrollbars="vertical"
-        />
+        android:scrollbars="vertical" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
