--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -48,6 +48,15 @@
             app:met_maxCharacters="11"
             app:met_primaryColor="@color/white"
             app:met_singleLineEllipsis="true"/>
+
+        <com.rey.material.widget.CheckBox
+            android:id="@+id/ckbRemember"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Material.Drawable.CheckBox"
+            android:text="@string/rememberme"
+            android:textColor="@color/white"
+            app:cbd_strokeColor="@color/white"/>
         
     </LinearLayout>
 
