Solución remember me y buscador

--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -56,7 +56,8 @@
             style="@style/Material.Drawable.CheckBox"
             android:text="@string/rememberme"
             android:textColor="@color/white"
-            app:cbd_strokeColor="@color/white"/>
+            app:cbd_strokeColor="@color/white"
+            app:cbd_tickColor="@color/colorPrimaryDark"/>
         
     </LinearLayout>
 
