--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -19,11 +19,10 @@
         
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtPhone"
-            android:hint="Numero Teléfono"
+            android:hint="@string/phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/white"
-            android:text="602217367"
             android:textColor="@color/white"
             android:textSize="34sp"
             android:inputType="phone"
@@ -35,11 +34,10 @@
 
         <com.rengwuxian.materialedittext.MaterialEditText
             android:id="@+id/edtPassword"
-            android:hint="Contraseña"
+            android:hint="@string/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/white"
-            android:text="1234"
             android:textColor="@color/white"
             android:textSize="34sp"
             android:inputType="textPassword"
@@ -48,16 +46,33 @@
             app:met_maxCharacters="11"
             app:met_primaryColor="@color/white"
             app:met_singleLineEllipsis="true"/>
+        
+        <LinearLayout
+            android:orientation="horizontal"
+            android:weightSum="2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-        <com.rey.material.widget.CheckBox
-            android:id="@+id/ckbRemember"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/Material.Drawable.CheckBox"
-            android:text="@string/rememberme"
-            android:textColor="@color/white"
-            app:cbd_strokeColor="@color/white"
-            app:cbd_tickColor="@color/colorPrimaryDark"/>
+            <com.rey.material.widget.CheckBox
+                android:id="@+id/ckbRemember"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                style="@style/Material.Drawable.CheckBox"
+                android:text="@string/rememberme"
+                android:textColor="@color/white"
+                app:cbd_strokeColor="@color/white"
+                app:cbd_tickColor="@color/colorPrimaryDark"/>
+
+            <TextView
+                android:id="@+id/txtForgotPswd"
+                android:textColor="@color/white"
+                android:text="@string/forgotpwd"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
         
     </LinearLayout>
 
