--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -40,16 +40,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
-
-        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-            android:id="@+id/btn_quantity"
-            android:layout_width="120dp"
-            android:layout_height="45dp"
-            android:layout_margin="10dp"
-            app:textColor="@color/white"
-            app:textSize="6sp"
-            app:initialNumber="1"
-            app:finalNumber="20"/>
+        
+        <ImageView
+            android:id="@+id/cart_item_count"
+            android:layout_gravity="center_vertical|end"
+            android:layout_marginRight="16dp"
+            android:layout_width="20dp"
+            android:layout_height="20dp"/>
 
     </LinearLayout>
 
