--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -23,6 +23,12 @@
             android:title="@string/pedido" />
 
         <item
+            android:id="@+id/nav_chgPsswd"
+            android:icon="@drawable/baseline_security_24"
+            android:iconTint="@color/white"
+            android:title="@string/changePassword"/>
+
+        <item
             android:id="@+id/nav_log_out"
             android:icon="@drawable/baseline_exit_to_app_24"
             android:iconTint="@android:color/white"
