--- a/app/src/main/res/layout/order_address_comment.xml
+++ b/app/src/main/res/layout/order_address_comment.xml
@@ -44,6 +44,30 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
+        <TextView
+            android:text="@string/paymentMethod"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+        <RadioGroup
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            
+            <RadioButton
+                android:id="@+id/onDelivery"
+                android:text="@string/onDelivery"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <RadioButton
+                android:id="@+id/rdyPayPal"
+                android:text="PayPal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+
+        </RadioGroup>
+
         </LinearLayout>
 
 </androidx.cardview.widget.CardView>
